--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -160,6 +160,12 @@
     <Filter Include="thirdparty\lzham\lzhamdecomp\include">
       <UniqueIdentifier>{3446634c-a632-4281-a500-459a56668a6b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\rtech\rui">
+      <UniqueIdentifier>{3f399cbb-a487-4562-b651-f8ce846e5f94}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\rtech\stryder">
+      <UniqueIdentifier>{2535a97c-967a-40af-bb52-02033747b4f0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\client.cpp">
@@ -208,9 +214,6 @@
       <Filter>sdk\public</Filter>
     </ClCompile>
     <ClCompile Include="..\rtech\rtech_utils.cpp">
-      <Filter>sdk\rtech</Filter>
-    </ClCompile>
-    <ClCompile Include="..\rtech\stryder.cpp">
       <Filter>sdk\rtech</Filter>
     </ClCompile>
     <ClCompile Include="..\inputsystem\inputsystem.cpp">
@@ -408,6 +411,12 @@
     <ClCompile Include="..\tier0\fasttimer.cpp">
       <Filter>sdk\tier0</Filter>
     </ClCompile>
+    <ClCompile Include="..\rtech\rui\rui.cpp">
+      <Filter>sdk\rtech\rui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\rtech\stryder\stryder.cpp">
+      <Filter>sdk\rtech\stryder</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -468,9 +477,6 @@
       <Filter>sdk\public\include</Filter>
     </ClInclude>
     <ClInclude Include="..\rtech\rtech_utils.h">
-      <Filter>sdk\rtech</Filter>
-    </ClInclude>
-    <ClInclude Include="..\rtech\stryder.h">
       <Filter>sdk\rtech</Filter>
     </ClInclude>
     <ClInclude Include="..\inputsystem\inputsystem.h">
@@ -1165,6 +1171,12 @@
     </ClInclude>
     <ClInclude Include="..\tier0\cpu.h">
       <Filter>sdk\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\rtech\rui\rui.h">
+      <Filter>sdk\rtech\rui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\rtech\stryder\stryder.h">
+      <Filter>sdk\rtech\stryder</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
