--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -393,7 +393,7 @@
     <ClCompile Include="..\engine\modelloader.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\materialsystem\materialsystem.cpp">
+    <ClCompile Include="..\materialsystem\cmaterialsystem.cpp">
       <Filter>sdk\materialsystem</Filter>
     </ClCompile>
     <ClCompile Include="..\game\server\ai_utility.cpp">
@@ -416,6 +416,9 @@
     </ClCompile>
     <ClCompile Include="..\rtech\stryder\stryder.cpp">
       <Filter>sdk\rtech\stryder</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\baseserver.cpp">
+      <Filter>sdk\engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -950,7 +953,7 @@
     <ClInclude Include="..\mathlib\color.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\materialsystem\materialsystem.h">
+    <ClInclude Include="..\materialsystem\cmaterialsystem.h">
       <Filter>sdk\materialsystem</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\debugoverlay.h">
@@ -1177,6 +1180,9 @@
     </ClInclude>
     <ClInclude Include="..\rtech\stryder\stryder.h">
       <Filter>sdk\rtech\stryder</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\baseserver.h">
+      <Filter>sdk\engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
