--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -46,7 +46,7 @@
     <ClCompile Include="..\inputsystem\inputsystem.cpp" />
     <ClCompile Include="..\launcher\IApplication.cpp" />
     <ClCompile Include="..\materialsystem\cmaterialglue.cpp" />
-    <ClCompile Include="..\materialsystem\materialsystem.cpp" />
+    <ClCompile Include="..\materialsystem\cmaterialsystem.cpp" />
     <ClCompile Include="..\mathlib\adler32.cpp" />
     <ClCompile Include="..\mathlib\bits.cpp" />
     <ClCompile Include="..\mathlib\crc32.cpp" />
@@ -142,7 +142,7 @@
     <ClInclude Include="..\inputsystem\inputsystem.h" />
     <ClInclude Include="..\launcher\IApplication.h" />
     <ClInclude Include="..\materialsystem\cmaterialglue.h" />
-    <ClInclude Include="..\materialsystem\materialsystem.h" />
+    <ClInclude Include="..\materialsystem\cmaterialsystem.h" />
     <ClInclude Include="..\mathlib\adler32.h" />
     <ClInclude Include="..\mathlib\bits.h" />
     <ClInclude Include="..\mathlib\color.h" />
