--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="..\ebisusdk\EbisuSDK.cpp" />
     <ClCompile Include="..\engine\baseclient.cpp" />
     <ClCompile Include="..\engine\baseclientstate.cpp" />
+    <ClCompile Include="..\engine\baseserver.cpp" />
     <ClCompile Include="..\engine\cl_rcon.cpp" />
     <ClCompile Include="..\engine\cmodel_bsp.cpp" />
     <ClCompile Include="..\engine\common.cpp" />
@@ -50,7 +51,7 @@
     <ClCompile Include="..\inputsystem\inputsystem.cpp" />
     <ClCompile Include="..\launcher\IApplication.cpp" />
     <ClCompile Include="..\materialsystem\cmaterialglue.cpp" />
-    <ClCompile Include="..\materialsystem\materialsystem.cpp" />
+    <ClCompile Include="..\materialsystem\cmaterialsystem.cpp" />
     <ClCompile Include="..\mathlib\adler32.cpp" />
     <ClCompile Include="..\mathlib\bits.cpp" />
     <ClCompile Include="..\mathlib\crc32.cpp" />
@@ -125,6 +126,7 @@
     <ClInclude Include="..\ebisusdk\EbisuSDK.h" />
     <ClInclude Include="..\engine\baseclient.h" />
     <ClInclude Include="..\engine\baseclientstate.h" />
+    <ClInclude Include="..\engine\baseserver.h" />
     <ClInclude Include="..\engine\cl_main.h" />
     <ClInclude Include="..\engine\cl_rcon.h" />
     <ClInclude Include="..\engine\cmodel_bsp.h" />
@@ -156,7 +158,7 @@
     <ClInclude Include="..\inputsystem\inputsystem.h" />
     <ClInclude Include="..\launcher\IApplication.h" />
     <ClInclude Include="..\materialsystem\cmaterialglue.h" />
-    <ClInclude Include="..\materialsystem\materialsystem.h" />
+    <ClInclude Include="..\materialsystem\cmaterialsystem.h" />
     <ClInclude Include="..\mathlib\adler32.h" />
     <ClInclude Include="..\mathlib\bits.h" />
     <ClInclude Include="..\mathlib\color.h" />
