--- a/r5dev/resource/cfg/game.cfg
+++ b/r5dev/resource/cfg/game.cfg
@@ -4,4 +4,4 @@
 //////////////////////////
 //// GAME             ////
 //////////////////////////
-// Put ConVar's you want to set on each level load here.
+// Put ConVar's you want to set on each game startup here.
