--- a/r5dev/resource/cfg/rcon_server_dev.cfg
+++ b/r5dev/resource/cfg/rcon_server_dev.cfg
@@ -3,7 +3,7 @@
 // See https://developer.valvesoftware.com/wiki/Source_RCON_Protocol for more information regarding RCON.
 // NOTE: This implementation is custom and differs slightly from Valve's implementation.
 
-rcon_password             "rconamos"         // !! WARNING !! Keep empty to disable RCON. Only enable this if you plan on using RCON.
+rcon_password             ""                 // !! WARNING !! Keep empty to disable RCON. Only enable this if you plan on using RCON.
 sv_rcon_debug             "1"                // Show RCON debug information ( ! slower! ).
 sv_rcon_banpenalty        "1"                // Number of minutes to ban IP before removing from ban vector.
 sv_rcon_maxfailures       "5"                // Max number of tomes a user can ignore RCON authentication before being banned.
