Default AIN rebuild to 0

--- a/r5dev/resource/cfg/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_server_dev.cfg
@@ -25,4 +25,5 @@ sv_visualizetraces           "1"      // Show native and script related debug tr
 //////////////////////////
 //// CAI              ////
 //////////////////////////
-ai_ainrebuildonmapstart      "2"       // Whether to rebuild the AIN graph on level load.
+ai_ainRebuildOnMapStart      "0"      // Whether to rebuild the AI Network graph on level load.
+ai_dumpAINfileFromLoad       "0"      // Whether to dump the parsed AI Network graph file loaded from disk.
