--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -195,6 +195,7 @@
     <ClInclude Include="..\server\server.h" />
     <ClInclude Include="..\squirrel\sqapi.h" />
     <ClInclude Include="..\squirrel\sqinit.h" />
+    <ClInclude Include="..\squirrel\sqtype.h" />
     <ClInclude Include="..\squirrel\sqvm.h" />
     <ClInclude Include="..\studiorender\studiorendercontext.h" />
     <ClInclude Include="..\thirdparty\detours\include\detours.h" />
