--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -1178,6 +1178,9 @@
     <ClInclude Include="..\engine\baseserver.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
+    <ClInclude Include="..\squirrel\sqtype.h">
+      <Filter>sdk\squirrel</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\shared\resource\lockedserver.png">
